--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yogesh",
-  "home": "http://yogeshkaushiksharma.github.io/reactportfolioyogesh",
+  "home": "http://yogeshkaushiksharma.github.io/reactyogesh",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
