--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "yogesh",
   "version": "0.1.0",
-  
+  "homepage": "http://yogeshkaushiksharma.github.io/reactportfolioyogesh",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -14,8 +14,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-   
-   
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
