--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "yogesh",
   "version": "0.1.0",
-  "homepage": "http://yogeshkaushiksharma.github.io/reactportfolioyogesh",
+  "homepage": "http://yogeshkaushiksharma.github.io/reactpyogesh",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
